Update docs to reflect Java 25
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>